2004-10-26  Pontus Freyhult  <pont@soua.net>

	* mship-edit.el (lp--redraw-entry-mark): Use lyskom-face-background,
	not face-background.

	Fix XEmacs problems with kom-prioritize:
	* compatibility.el (lyskom-face-background): Changed to a wrapper
	function that returns a string (not a color-specifier) or nil.
	(lyskom-face-foreground): Dito.

2004-10-25  Pontus Freyhult  <pont@soua.net>

	* review.el (kom-review-noconversion): Use nil for 
	kom-show-footnotes-immediately during review with noconversion.

	Fix bug 1324:
	* view-text.el (lyskom-follow-comments): Removed possible
	footnote display.
	(lyskom-view-text): Show footnotes if desired.

2004-10-23  Pontus Freyhult  <pont@soua.net>

	Fix bug 284:
	* english-strings.el, swedish-strings.el: 
	(lyskom-custom-strings): Added kom-show-imported-message-id-tag
	and kom-show-imported-message-id-doc.
	(lyskom-message): Added message-id.

	* option-edit.el (lyskom-customize-buffer-format): Added 
	kom-show-imported-message-id.
	(lyskom-custom-variables): Dito.	

	*vars.el.in (kom-show-imported-message-id): New variable.
	(kom-show-imported-external-recipients): Changed documentation
	(added kom-show-imported-message-id as "see also").

	* view-text.el (lyskom-view-text): Show Message-Id if available
	and kom-show-imported-message-id is true.
	
2004-10-19  Pontus Freyhult  <pont@soua.net>

	Allow for easy relogin from dead sessions (bug 1278):
	* command.el (lyskom-start-of-command): Possibly rerun 
	lyskom according to kom-relogin-behaviour.

	* startup.el (kom-start-anew): Handle the case of 
	lyskom-default-user-name being an integer.

	*vars.el.in (kom-relogin-behaviour): New variable.
	(lyskom-default-user-name): Changed documentation.

	* english-strings.el, swedish-strings.el: 
	(lyskom-message): Added resurrect-session.
	(lyskom-custom-strings): Added kom-relogin-behaviour-doc 
	and kom-relogin-behaviour-tag.

	* option-edit.el (lyskom-customize-buffer-format): Added 
	kom-relogin-behaviour.